portfolio: change .ph-image position to absolute for layout adjustment (fix responsive preview on mobile)
Changed-Id: 040209102a7c2d9391ce35839843358c0e62e365

--- a/assets/css/dark-style.css
+++ b/assets/css/dark-style.css
@@ -1762,7 +1762,7 @@ body:not(.tt-boxed) .page-header-inner,
 }
 
 .ph-image {
-  position: relative;
+  position: absolute;
   top: 160px;
   right: 18vw;
   width: clamp(340px, 18vw, 800px);
@@ -1773,7 +1773,7 @@ body:not(.tt-boxed) .page-header-inner,
 
 .color-image {
   width: 100%;
-	height: auto;
+  height: auto;
   display: block;
   filter: grayscale(1);
   transition: filter 0.5s ease;
